# SysMedic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/sysmedic-cli/: Cargo.toml
crates/sysmedic-cli/src/: fix.rs  main.rs  schedule.rs  text.rs  tools.rs
crates/sysmedic-collectors/: Cargo.toml
crates/sysmedic-collectors/src/: battery.rs  boot.rs  cpu.rs  disk.rs  flatpak.rs  lib.rs  logs.rs  memory.rs  network.rs  packages.rs  ports.rs  process.rs  security.rs  services.rs  smart.rs  snap.rs  thermal.rs  util.rs
crates/sysmedic-core/: Cargo.toml
crates/sysmedic-core/src/: alert.rs  engine.rs  finding.rs  fix.rs  lib.rs  score.rs  snapshot.rs  thresholds.rs
crates/sysmedic-daemon/: Cargo.toml
crates/sysmedic-daemon/src/: main.rs
crates/sysmedic-diagnostics/: Cargo.toml
crates/sysmedic-diagnostics/src/: lib.rs  rules.rs
crates/sysmedic-diskscan/: Cargo.toml
crates/sysmedic-diskscan/src/: lib.rs  treemap.rs
crates/sysmedic-fixes/: Cargo.toml
crates/sysmedic-fixes/src/: command.rs  fixes.rs  journal.rs  lib.rs
crates/sysmedic-gui/: Cargo.toml
crates/sysmedic-gui/src/: disk.rs  main.rs  ui.rs  viewmodel.rs
crates/sysmedic-history/: Cargo.toml
crates/sysmedic-history/src/: lib.rs
crates/sysmedic-knowledge/: Cargo.toml
crates/sysmedic-knowledge/data/: knowledge.yaml
crates/sysmedic-knowledge/src/: lib.rs  llm.rs
crates/sysmedic-report/: Cargo.toml
crates/sysmedic-report/src/: lib.rs
data/: README.md  io.github.abosalehg_ui.SysMedic.desktop  io.github.abosalehg_ui.SysMedic.metainfo.xml  io.github.abosalehg_ui.sysmedic.policy
docs/: ARCHITECTURE.md  COMPETITIVE-ANALYSIS.md  ENGINEERING-REVIEW.md  ISSUES.md  ROADMAP.md  VISION.md
docs/site/: index.html
packaging/: README.md
packaging/appimage/: build-appimage.sh
packaging/deb/: build-deb.sh
packaging/flatpak/: io.github.abosalehg_ui.SysMedic.yaml
packaging/snap/: snapcraft.yaml
