[package]
name = "sysmedic-collectors"
description = "Linux system data collectors (procfs, sysfs, systemd, apt, snap) for SysMedic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sysmedic-core = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
