[package]
name = "sysmedic-daemon"
description = "sysmedic-fix-helper — the privileged, polkit-authorized fix executor for SysMedic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sysmedic-fix-helper"
path = "src/main.rs"

[dependencies]
sysmedic-core = { workspace = true }
sysmedic-collectors = { workspace = true }
sysmedic-fixes = { workspace = true }
