[package]
name = "sysmedic-diskscan"
description = "Directory size scanning and squarified-treemap layout for SysMedic's disk analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
