[package]
name = "sysmedic-fixes"
description = "Safe, previewable, undoable fixes for SysMedic with a transaction journal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sysmedic-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
humantime = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
