[package]
name = "sysmedic-gui"
description = "SysMedic GTK4/libadwaita desktop application"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sysmedic-gui"
path = "src/main.rs"

[dependencies]
sysmedic-core = { workspace = true }
sysmedic-collectors = { workspace = true }
sysmedic-diagnostics = { workspace = true }
sysmedic-knowledge = { workspace = true }
sysmedic-fixes = { workspace = true }
sysmedic-diskscan = { workspace = true }
sysmedic-history = { workspace = true }
gtk = { package = "gtk4", version = "0.9", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
