[package]
name = "sysmedic-history"
description = "Health-score history storage and trend rendering for SysMedic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sysmedic-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
humantime = { workspace = true }

[dev-dependencies]
tempfile = "3"
