[package]
name = "sysmedic-knowledge"
description = "Offline bilingual explanation knowledge base for SysMedic findings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
once_cell = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
sysmedic-diagnostics = { workspace = true }
