[package]
name = "sysmedic-report"
description = "Report rendering (JSON, Markdown, HTML) for SysMedic health reports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sysmedic-core = { workspace = true }
sysmedic-knowledge = { workspace = true }
serde_json = { workspace = true }
